--- a/index.html
+++ b/index.html
@@ -34,33 +34,31 @@
       <h1>Welcome to your website!</h1>
     </section>
     <section id="about">
-      <div class="container">
-        <h2>Illustrations</h2>
-        <div class="about-container">
-          <div class="image-container">
-            <h2>Web Innovation</h2>
-            <img
-              src="images/proud_coder_light.svg"
-              alt="Proud Coder"
-              id="image1"
-            />
-          </div>
-          <div class="image-container">
-            <h2>Problem Solving</h2>
-            <img
-              src="images/feeling_proud_light.svg"
-              alt="Feeling Proud"
-              id="image2"
-            />
-          </div>
-          <div class="image-container">
-            <h2>High Concept</h2>
-            <img
-              src="images/conceptual_idea_light.svg"
-              alt="Conceptual Idea"
-              id="image3"
-            />
-          </div>
+      <h2>Illustrations</h2>
+      <div class="about-container">
+        <div class="image-container">
+          <h2>Web Innovation</h2>
+          <img
+            src="images/proud_coder_light.svg"
+            alt="Proud Coder"
+            id="image1"
+          />
+        </div>
+        <div class="image-container">
+          <h2>Problem Solving</h2>
+          <img
+            src="images/feeling_proud_light.svg"
+            alt="Feeling Proud"
+            id="image2"
+          />
+        </div>
+        <div class="image-container">
+          <h2>High Concept</h2>
+          <img
+            src="images/conceptual_idea_light.svg"
+            alt="Conceptual Idea"
+            id="image3"
+          />
         </div>
       </div>
     </section>
@@ -71,6 +69,11 @@
     <!-- Contacts -->
     <section id="contact">
       <h2>Contact US</h2>
+      <div class="socials">
+        <i class="fab fa-github"></i>
+        <i class="fab fa-codepen"></i>
+        <i class="fab fa-linkedin-in"></i>
+      </div>
     </section>
   </body>
 </html>
