Add switch toggle input with functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
           <a href="#projects">projects</a>
           <a href="#contact">contact</a>
         </div>
+        <div class="theme-switch-wrapper">
+          <span id="toggle-icon">
+            <span class="toggle-text">Light Mode</span>
+            <i class="fas fa-sun"></i>
+        </span>
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+      </div>
       </div>
     </nav>
     <section id="home" class="home">
